# Idz6_cpp

./: CMakeLists.txt  MyDictionary.cpp  MyDictionary.hpp  main.cpp
